<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="20dp"
        android:background="@color/gray3"
        >
        <ImageView
            android:id="@+id/profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/user"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:id="@+id/P_Username3"
            android:textSize="20sp"
            android:layout_toRightOf="@id/profile"
            android:layout_centerVertical="true"

            android:layout_marginLeft="15dp"></TextView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:background="@color/white"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="13dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="700dp"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/editprofile"></ImageView>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView_E1"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toStartOf="@+id/E_UserName"
            android:layout_toLeftOf="@+id/E_UserName"
            android:layout_weight="1"
            android:drawableLeft="@drawable/name"
            android:text="@string/Username"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/E_UserName"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="1dp" />

        <EditText
            android:id="@+id/E_UserName"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Username1"
            android:textColor="@color/gray1"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_E1"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView_E2"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toStartOf="@+id/E_Email"
            android:layout_toLeftOf="@+id/E_Email"
            android:layout_weight="1"
            android:drawableLeft="@drawable/mail"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/E_Email"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="1dp" />

        <EditText
            android:id="@+id/E_Email"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Email1"
            android:editable="false"
            android:textColor="@color/gray1"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_E2"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView_E3"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toStartOf="@+id/E_Phone"
            android:layout_toLeftOf="@+id/E_Phone"
            android:layout_weight="1"
            android:drawableLeft="@drawable/phone"
            android:text="@string/Phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/E_Phone"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="1dp" />

        <EditText
            android:id="@+id/E_Phone"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Phone1"
            android:textColor="@color/gray1"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_E3"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView_E4"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toStartOf="@+id/E_Password"
            android:layout_toLeftOf="@+id/E_Password"
            android:layout_weight="1"
            android:drawableLeft="@drawable/password"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/E_Password"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="1dp" />

        <EditText
            android:id="@+id/E_Password"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="text"
            android:text="@string/password1"
            android:textColor="@color/gray1"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_E4"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/yellow"
        android:padding="20dp">

        <Button
            android:id="@+id/E_SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save"
            app:backgroundTint="@color/gray3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
