<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnGoing">

    <TextView
        android:id="@+id/ongoing1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="On Going"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="554dp"
        android:layout_height="318dp"
        app:srcCompat="@drawable/ongoing" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="412dp"
        android:background="@color/yellow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="198dp"
                android:layout_height="71dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/PickupDate"
                android:textColor="@color/gray2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/OnGoing_Date"
                android:layout_width="198dp"
                android:layout_height="71dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="173dp"
                android:layout_height="115dp"
                app:srcCompat="@drawable/audi" />

            <LinearLayout
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="115dp"
                            android:layout_height="60dp"
                            android:text="Booking ID"
                            android:textColor="@color/gray2" />

                        <TextView
                            android:id="@+id/OnGoing_BookingId"
                            android:layout_width="121dp"
                            android:layout_height="47dp"
                        />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="115dp"
                        android:layout_height="60dp"
                        android:text="@string/Username"
                        android:textColor="@color/gray2" />

                    <TextView

                        android:layout_width="121dp"
                        android:layout_height="46dp"
                       />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:text="@string/PickupLocation"
                        android:textColor="@color/gray2" />

                    <TextView
                        android:id="@+id/OnGoing_Pickup"
                        android:layout_width="127dp"

                        android:layout_height="match_parent"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="213dp"
                    android:layout_height="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="106dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="@string/CarModel"
                        android:textColor="@color/gray2" />

                    <TextView
                        android:id="@+id/OnGoing_Model"
                        android:layout_width="100dp"
                        android:layout_height="38dp"
            />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="151dp">

            <Button
                android:id="@+id/OnGoing_Button"
                android:layout_width="103dp"
                android:layout_height="65dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"

                android:text="@string/Start"
                app:backgroundTint="@color/gray3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</LinearLayout>


