<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Trip">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="508dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="267dp"
            android:layout_height="72dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/trip"
            android:textColor="@color/black"
            android:textSize="34sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <fragment
            android:id="@+id/google_map"
            android:layout_width="357dp"
            android:layout_height="294dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.google.android.gms.maps.SupportMapFragment">


        </fragment>

        <TextView
            android:id="@+id/Trip_Location2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-30dp"
            android:layout_marginLeft="-20dp"
            android:text="YOUR LOCATION"

            android:fontFamily="sans-serif-black"
            android:textColor="@color/gray2"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/google_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/Trip_Location1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="-200dp"
            android:text="VEHICLE AT"

            android:fontFamily="sans-serif-black"
            android:textColor="@color/gray2"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/google_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Trip_Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/yellow"
            android:layout_marginLeft="100dp"
            android:drawableLeft="@drawable/loc"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/gray2"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/google_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="145dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/duration"

            android:textColor="@color/gray2"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/Trip_duration"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/gray2"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="145dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="50dp"
            android:text="Booking Id"

            android:textColor="@color/gray2"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/Trip_Username"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginHorizontal="20dp"

            android:textColor="@color/gray2"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="145dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/model"

            android:textColor="@color/gray2"
            android:textSize="20dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginHorizontal="20dp"
        android:id="@+id/Trip_Model"
            android:textColor="@color/gray2"
            android:textSize="20dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow">

        <Button
            android:id="@+id/Trip_End_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            app:backgroundTint="@color/gray3"
            app:layout_constraintBaseline_toBaselineOf="@+id/Trip_Park_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toEndOf="@+id/Trip_Park_button" />

        <Button
            android:id="@+id/Trip_Park_button"
            android:layout_width="108dp"
            android:layout_height="47dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:text="@string/park"
            app:backgroundTint="@color/gray3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>